--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
         <div class="container">
             <main>
                 <h1>طرة أم نقش</h1>
-                
+                <div class="row wins-counter" style="margin: 10px 0;">
+                    <div class="col" style="width: fit-content; color: green;">
+                        <span id="wins">0</span>
+                    </div>
+                    <div class="col" style="width: fit-content; color: red;">
+                        <span id="loses">0</span>
+                    </div>
+                </div>
                 <div class="quiz hidden">احزر</div>
                 <img src="img/front.png" alt="Syrian Coin" id="coinImg">
                 <div class="start-btn">
